Added changes for resubmission

--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -9,9 +9,9 @@
   .input{
     display: block;
     width: 94%;
-    margin: 10px auto 0;
+    margin: $space auto 0;
     border: none;
-    padding: 10px;
+    padding: $space;
     border-bottom: 5px solid #58e1c1;
   }
   
