--- a/scss/components/_images.scss
+++ b/scss/components/_images.scss
@@ -6,7 +6,7 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 10px;
+    margin-top: $space;
     max-width: 100%; 
     max-height: 100%;
   }
@@ -15,7 +15,7 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 10px;
+    margin-top: $space;
     max-width: 100%;
     padding: 13px;
     border: 1px solid #ccc;
