--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -12,7 +12,7 @@
   .nav-link {
     text-align: center;
     border-radius: 5px;
-    padding: 10px 0;
+    padding: $space 0;
     display: block;
     width: 100%;
     transition: 
